apps/mem0/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mem0-server
  namespace: mem0
spec:
  selector:
    app: mem0-server
  ports:
    - name: http
      port: 8000
      targetPort: 8000
