apps/mem0/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mem0-ingress
  namespace: mem0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: mem0.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - mem0.amer.dev
      secretName: mem0-amer-dev-tls
  rules:
    - host: mem0.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mem0-server
                port:
                  number: 8000
